processed/gerrit/txt_full/55537.txt
Change:     55537
Subject:    LU-17976 build: fix nla_strnid() -Werror=missing-prototypes
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/55537
Change-Id:  I0225794b3fac2f36aafadff783ca921fbc757edd
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Jian Yu
Created:    2024-06-25 23:14:03.000000000
Updated:    2024-07-08 20:12:50.000000000
Patch Set:  2
Insertions: +7
Deletions:  -6
Comments:   0 (0 unresolved)
Topic:      ubuntu2404

--- Labels ---
  Code-Review: James Simmons: +1; Shaun Tancheff: +1; Oleg Drokin: +2; Timothy Day: +1
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, James Simmons, Shaun Tancheff, Timothy Day

--- Commit Message ---
LU-17976 build: fix nla_strnid() -Werror=missing-prototypes

This patch explicitly defines nla_strnid() as a static function
to fix the following build failure:

  lnet/lnet/api-ni.c:2929:1: error:
  no previous prototype for 'nla_strnid' [-Werror=missing-prototypes]
   2929 | nla_strnid(struct nlattr **attr, struct lnet_nid *nid, int *rem,
        | ^~~~~~~~~~

It also fixes:
- lnet_fault_show_done()
- lnet_fault_show_start()
- lnet_fault_show_dump()
- __ll_dio_user_copy()
- ll_dio_user_copy_helper()

Change-Id: I0225794b3fac2f36aafadff783ca921fbc757edd
Fixes: f1c6623 ("LU-10391 lnet: Fault injection add/del ioctls to netlink")
Fixes: 1fa633c ("LU-17478 clio: parallelize unaligned DIO write copy")
Signed-off-by: Jian Yu <yujian@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/55537
Reviewed-by: Timothy Day <timday@amazon.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>

--- Review History ---

--- Message (Jian Yu, 2024-06-25 23:14:03.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2024-06-25 23:16:03.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Lustre Gerrit Janitor, 2024-06-25 23:17:05.000000000) ---
Patch Set 1:

Builds for x86_64 centos7,rhel8.5 successful
Job output URL: https://testing.whamcloud.com/gerrit-janitor/43685/results.html

 Commencing initial testing: runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs

--- Message (Jian Yu, 2024-06-25 23:17:34.000000000) ---
Topic set to ubuntu2404

--- Message (Lustre Gerrit Janitor, 2024-06-25 23:30:32.000000000) ---
Patch Set 1:

Initial testing succeeded.

Succeeded:
- runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs 

(centos7)All results and logs: https://testing.whamcloud.com/gerrit-janitor/43685/results.html
Commencing standard testing: 
- conf-sanity1@ldiskfs+DNE conf-sanity2@ldiskfs+DNE conf-sanity3@ldiskfs+DNE conf-sanity-slow@ldiskfs+DNE conf-sanity-slow-106@ldiskfs+DNE conf-sanity1@zfs conf-sanity2@zfs conf-sanity3@zfs conf-sanity-slow@zfs conf-sanity-slow-106@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE lustre-rsync-test@zfs ost-pools@ldiskfs+DNE ost-pools@zfs pjdfstest@ldiskfs+DNE pjdfstest@zfs racer@ldiskfs+DNE racer@zfs recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@ldiskfs+DNE replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single@ldiskfs+DNE replay-single@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@zfs sanity2@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@ldiskfs+DNE sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@ldiskfs+DNE sanity-lfsck@zfs sanity-lnet@zfs sanity-pcc@ldiskfs+DNE sanity-pcc@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs

--- Message (Timothy Day, 2024-06-25 23:36:24.000000000) ---
Patch Set 1: Code-Review+1

--- Message (James Simmons, 2024-06-25 23:39:25.000000000) ---
Patch Set 1: Code-Review+1

--- Message (jenkins, 2024-06-26 00:07:29.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/105708/ : SUCCESS

--- Message (Maloo, 2024-06-26 00:07:41.000000000) ---
Patch Set 1:

The following sessions will be run for build 105708 patch 1

Enforced:
- review-ldiskfs on el8.9-x86_64/ldiskfs servers and clients
- review-zfs on el8.9-x86_64/zfs servers and clients
- review-dne-part-1 on el9.3-x86_64/ldiskfs servers and clients
- review-dne-part-2 on el9.3-x86_64/ldiskfs servers and clients
- review-dne-part-3 on el9.3-x86_64/ldiskfs servers and clients
- review-dne-part-4 on el9.3-x86_64/ldiskfs servers and clients
- review-dne-part-5 on el9.3-x86_64/ldiskfs servers and clients
- review-dne-part-6 on el9.3-x86_64/ldiskfs servers and clients
- review-dne-part-7 on el9.3-x86_64/ldiskfs servers and clients
- review-dne-part-8 on el9.3-x86_64/ldiskfs servers and clients
- review-ldiskfs on el9.3-x86_64/ldiskfs servers and clients
- review-dne-selinux-ssk-part-1 on el8.9-x86_64/ldiskfs servers and clients
- review-dne-selinux-ssk-part-2 on el8.9-x86_64/ldiskfs servers and clients
- review-ldiskfs on el8.9-x86_64/ldiskfs servers and el9.3-x86_64/ldiskfs clients
- review-ldiskfs on el8.9-x86_64/ldiskfs servers and sles15sp5-x86_64/ldiskfs clients

Optional:
- review-dne-part-9 on el9.3-x86_64/ldiskfs servers and clients
- review-ldiskfs-arm on el8.9-x86_64/ldiskfs servers and el9.3-aarch64/ldiskfs clients
- review-ldiskfs-ubuntu on el8.9-x86_64/ldiskfs servers and ubuntu2204-x86_64/ldiskfs clients

Maloo Test Queue: https://testing.whamcloud.com/test_queue?jobs=lustre-reviews&builds=105708&commit=Apply+Filter
Maloo Results: https://testing.whamcloud.com/test_sessions/related?jobs=lustre-reviews&builds=105708#redirect

--- Message (Lustre Gerrit Janitor, 2024-06-26 02:28:34.000000000) ---
Patch Set 1:

Testing has completed with errors!

> racer@ldiskfs+DNE Timeout(1009s)

Succeeded:
- conf-sanity1@ldiskfs+DNE conf-sanity2@ldiskfs+DNE conf-sanity3@ldiskfs+DNE conf-sanity-slow@ldiskfs+DNE conf-sanity-slow-106@ldiskfs+DNE conf-sanity1@zfs conf-sanity2@zfs conf-sanity3@zfs conf-sanity-slow@zfs conf-sanity-slow-106@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE lustre-rsync-test@zfs ost-pools@ldiskfs+DNE ost-pools@zfs pjdfstest@ldiskfs+DNE pjdfstest@zfs racer@zfs recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@ldiskfs+DNE replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single@ldiskfs+DNE replay-single@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@zfs sanity2@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@ldiskfs+DNE sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@ldiskfs+DNE sanity-lfsck@zfs sanity-lnet@zfs sanity-pcc@ldiskfs+DNE sanity-pcc@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs 

(centos7)All results and logs: https://testing.whamcloud.com/gerrit-janitor/43685/results.html

--- Message (Maloo, 2024-06-26 08:40:36.000000000) ---
Patch Set 1: Verified+1

Passed enforced test review-dne-part-3 on RHEL 9.3/x86_64 uploaded by Trevis Autotest from trevis-65vm1: https://testing.whamcloud.com/test_sessions/e76cc517-5594-42ac-944e-3a5e0da27714 ran 3 tests.

--- Message (Shaun Tancheff, 2024-07-05 10:15:31.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Oleg Drokin, 2024-07-08 20:12:47.000000000) ---
Patch Set 1: Code-Review+2

--- Message (Oleg Drokin, 2024-07-08 20:12:50.000000000) ---
Change has been successfully cherry-picked as 3fe8d551cb945c5ad10ebf6fd6e28915e28a8423 by Oleg Drokin
